/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

package opennms.inventory;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.inventory.dto";


message MonitorEntityResponse {
  string id = 1;
  int64 locationId = 2;
  string type = 3;
  //google.protobuf.Any config = 4; // TODO: need to be change LOK-2545
}

message ListMonitorEntities {
  repeated MonitorEntityResponse listMonitorEntityResponse = 1;
}

message SearchQuery {
  optional int64  locationId = 1;
  optional string providerId = 2;
}

service MonitoredEntityService {
  rpc getAllMonitoredEntitiesByLocation(google.protobuf.Int64Value) returns(ListMonitorEntities) {};
  rpc getAllMonitoredEntitiesBySearchTerm(SearchQuery) returns(ListMonitorEntities) {};
  rpc getAllMonitoredEntities(google.protobuf.Empty) returns(ListMonitorEntities){};
}
